# git-su

./: Cargo.toml  LICENSE  README.md
man/man1/: git-su.1
src/: color.rs  config_repository.rs  git.rs  lib.rs  main.rs  shell.rs  switcher.rs  user.rs  user_file.rs  user_list.rs
tests/: cli_tests.rs  tui_tests.rs
