[package]
name = "git-su"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
description = "Manage Git users, switch identity quickly, and support pairing (multi-user) commits"
license = "MIT"
repository = "https://github.com/jianglu/git-su"
keywords = ["git", "user", "identity", "gitsu", "pairing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
serde = { version = "1", features = ["derive"] }
toml = "1.0.6"

[dev-dependencies]
tempfile = "3"
expectrl = "0.8"